--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lodash": "^4.17.15",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "sass": "^1.23.3"
   },
   "scripts": {
     "start": "react-scripts start",
